--- a/laokou-common/laokou-common-bom/pom.xml
+++ b/laokou-common/laokou-common-bom/pom.xml
@@ -108,11 +108,23 @@
         <swagger.version>2.2.15</swagger.version>
         <!--disruptor版本-->
         <disruptor.version>3.4.4</disruptor.version>
+        <!--dubbo版本-->
+        <dubbo.version>3.2.6</dubbo.version>
     </properties>
 
     <!-- 定义全局jar版本,模块使用需要再次引入但不用写版本号 -->
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.laokou</groupId>
+                <artifactId>laokou-common-dubbo</artifactId>
+                <version>${laokou.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.dubbo</groupId>
+                <artifactId>dubbo-spring-boot-starter</artifactId>
+                <version>${dubbo.version}</version>
+            </dependency>
             <dependency>
                 <groupId>com.lmax</groupId>
                 <artifactId>disruptor</artifactId>
