--- a/laokou-common/pom.xml
+++ b/laokou-common/pom.xml
@@ -61,6 +61,7 @@
         <module>laokou-common-lock</module>
         <module>laokou-common-monitor</module>
         <module>laokou-common-sensitive</module>
+        <module>laokou-common-dubbo</module>
     </modules>
 
 </project>
