--- a/laokou-service/laokou-admin/laokou-admin-start/src/main/resources/bootstrap.yml
+++ b/laokou-service/laokou-admin/laokou-admin-start/src/main/resources/bootstrap.yml
@@ -60,3 +60,42 @@ spring:
           - data-id: application-common-rocketmq.yaml
             group: ${NACOS-GROUP}
             refresh: true
+
+#dubbo:
+#  application:
+#    id: ${spring.application.name}
+#    name: ${dubbo.application.id}
+#  protocol:
+#    name: dubbo
+#    port: -1
+#    ssl-enabled: true
+#  registry:
+#    address: 127.0.0.1:8848
+#    username: ${NACOS-USERNAME}
+#    group: ${DUBBO-GROUP}
+#    password: ${NACOS-PASSWORD}
+#    parameters:
+#      namespace: ${DUBBO-NAMESPACE}
+#      register-consumer-url: true
+#    protocol: nacos
+#  metadata-report:
+#    address: ${DUBBO-REGISTRY-ADDRESS}
+#    username: ${NACOS-USERNAME}
+#    group: ${DUBBO-GROUP}
+#    password: ${NACOS-PASSWORD}
+#    parameters:
+#      namespace: ${DUBBO-NAMESPACE}
+#      register-consumer-url: true
+#  config-center:
+#    address: ${DUBBO-REGISTRY-ADDRESS}
+#    username: ${NACOS-USERNAME}
+#    group: ${DUBBO-GROUP}
+#    password: ${NACOS-PASSWORD}
+#    parameters:
+#      namespace: ${DUBBO-NAMESPACE}
+#      register-consumer-url: true
+#  consumer:
+#    check: false
+#    timeout: 5000
+#  scan:
+#    base-packages: org.laokou.admin.gatewayimpl.rpc
