--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
         <!--spring-cloud版本-->
         <spring-cloud.version>2022.0.4</spring-cloud.version>
         <!--spring-framework版本-->
-        <spring-framework.version>6.0.11</spring-framework.version>
+        <spring-framework.version>6.0.12</spring-framework.version>
         <!--cloud-alibaba版本-->
         <spring-cloud-alibaba.version>2022.0.0.0</spring-cloud-alibaba.version>
         <!--spring-doc版本-->
@@ -219,6 +219,9 @@
                 <MAIL-PASSWORD>xxx</MAIL-PASSWORD>
                 <MAIL-USERNAME>xxx</MAIL-USERNAME>
                 <JASYPT-ENCRYPTOR-PASSWORD>5201314wumeihua</JASYPT-ENCRYPTOR-PASSWORD>
+                <DUBBO-REGISTRY-ADDRESS>nacos://127.0.0.1:8848</DUBBO-REGISTRY-ADDRESS>
+                <DUBBO-NAMESPACE>4f202afe-3678-4ccb-8837-4071d663fee1</DUBBO-NAMESPACE>
+                <DUBBO-GROUP>DUBBO_GROUP</DUBBO-GROUP>
             </properties>
             <activation>
                 <activeByDefault>true</activeByDefault>
@@ -252,6 +255,9 @@
                 <MAIL-PASSWORD>ENC(rasxLuU0mvx9DIto2sRiah7GgE3gmKhEzlL1swSAP2Y=)</MAIL-PASSWORD>
                 <MAIL-USERNAME>2413176044@qq.com</MAIL-USERNAME>
                 <JASYPT-ENCRYPTOR-PASSWORD>5201314wumeihua</JASYPT-ENCRYPTOR-PASSWORD>
+                <DUBBO-REGISTRY-ADDRESS>nacos://127.0.0.1:8848</DUBBO-REGISTRY-ADDRESS>
+                <DUBBO-NAMESPACE>4f202afe-3678-4ccb-8837-4071d663fee1</DUBBO-NAMESPACE>
+                <DUBBO-GROUP>DUBBO_GROUP</DUBBO-GROUP>
             </properties>
         </profile>
         <!-- 正式环境 -->
@@ -304,6 +310,12 @@
                 <MAIL-USERNAME>${MAIL-USERNAME:2413176044@qq.com}</MAIL-USERNAME>
                 <!--suppress UnresolvedMavenProperty -->
                 <JASYPT-ENCRYPTOR-PASSWORD>${JASYPT-ENCRYPTOR-PASSWORD:5201314wumeihua}</JASYPT-ENCRYPTOR-PASSWORD>
+                <!--suppress UnresolvedMavenProperty -->
+                <DUBBO-REGISTRY-ADDRESS>${DUBBO-REGISTRY-ADDRESS:nacos://127.0.0.1:8848}</DUBBO-REGISTRY-ADDRESS>
+                <!--suppress UnresolvedMavenProperty -->
+                <DUBBO-NAMESPACE>${DUBBO-NAMESPACE:4f202afe-3678-4ccb-8837-4071d663fee1}</DUBBO-NAMESPACE>
+                <!--suppress UnresolvedMavenProperty -->
+                <DUBBO-GROUP>${DUBBO-GROUP:DUBBO_GROUP}</DUBBO-GROUP>
             </properties>
         </profile>
     </profiles>
