--- a/laokou-service/laokou-admin/laokou-admin-infrastructure/pom.xml
+++ b/laokou-service/laokou-admin/laokou-admin-infrastructure/pom.xml
@@ -37,10 +37,10 @@
             <groupId>org.laokou</groupId>
             <artifactId>laokou-common-rocketmq</artifactId>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.laokou</groupId>-->
-<!--            <artifactId>laokou-common-dubbo</artifactId>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-dubbo</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.laokou</groupId>
             <artifactId>laokou-im-client</artifactId>
