--- a/laokou-service/laokou-module/laokou-flowable/laokou-flowable-infrastructure/pom.xml
+++ b/laokou-service/laokou-module/laokou-flowable/laokou-flowable-infrastructure/pom.xml
@@ -23,6 +23,10 @@
             <groupId>org.laokou</groupId>
             <artifactId>laokou-common-mybatis-plus</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-dubbo</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
