--- a/laokou-service/laokou-module/pom.xml
+++ b/laokou-service/laokou-module/pom.xml
@@ -32,5 +32,6 @@
         <module>laokou-flowable</module>
         <module>laokou-api</module>
         <module>laokou-flyway</module>
+        <module>laokou-logstash</module>
     </modules>
 </project>
