feat: 增加dubbo使用例子

--- a/laokou-service/laokou-admin/laokou-admin-infrastructure/pom.xml
+++ b/laokou-service/laokou-admin/laokou-admin-infrastructure/pom.xml
@@ -75,6 +75,10 @@
         </dependency>
         <dependency>
             <groupId>org.laokou</groupId>
+            <artifactId>laokou-report-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
             <artifactId>laokou-common-openfeign</artifactId>
         </dependency>
     </dependencies>
