--- a/laokou-service/laokou-report/laokou-report-start/pom.xml
+++ b/laokou-service/laokou-report/laokou-report-start/pom.xml
@@ -16,6 +16,16 @@
             <artifactId>laokou-report-app</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-nacos</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.laokou</groupId>
+                    <artifactId>laokou-common-core</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
             <exclusions>
