feat: 调整架构依赖层级

--- a/laokou-service/laokou-module/laokou-flowable/laokou-flowable-domain/pom.xml
+++ b/laokou-service/laokou-module/laokou-flowable/laokou-flowable-domain/pom.xml
@@ -13,7 +13,7 @@
     <dependencies>
         <dependency>
             <groupId>org.laokou</groupId>
-            <artifactId>laokou-flowable-client</artifactId>
+            <artifactId>laokou-common-core</artifactId>
         </dependency>
     </dependencies>
 
