--- a/laokou-service/laokou-admin/laokou-admin-infrastructure/pom.xml
+++ b/laokou-service/laokou-admin/laokou-admin-infrastructure/pom.xml
@@ -35,6 +35,10 @@
         </dependency>-->
         <dependency>
             <groupId>org.laokou</groupId>
+            <artifactId>laokou-admin-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
             <artifactId>laokou-common-mybatis-plus</artifactId>
             <exclusions>
                 <exclusion>
