--- a/laokou-service/laokou-module/laokou-flowable/laokou-flowable-start/pom.xml
+++ b/laokou-service/laokou-module/laokou-flowable/laokou-flowable-start/pom.xml
@@ -13,6 +13,10 @@
     <dependencies>
         <dependency>
             <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-prometheus</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
             <artifactId>laokou-common-nacos</artifactId>
             <exclusions>
                 <exclusion>
