--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,12 @@
         <spring-cloud-alibaba.version>2022.0.0.0</spring-cloud-alibaba.version>
         <!--spring-doc版本-->
         <spring-doc.version>2.2.0</spring-doc.version>
+        <!--mapstruct版本-->
+        <mapstruct.version>1.5.5.Final</mapstruct.version>
+        <!--lombok-mapstruct-binding版本-->
+        <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
+        <!--lombok版本-->
+        <lombok.version>1.18.30</lombok.version>
         <docker.repostory>registry.cn-hangzhou.aliyuncs.com</docker.repostory>
         <docker.registry.name>koushenhai</docker.registry.name>
         <docker.version>1.2.2</docker.version>
@@ -60,6 +66,14 @@
     </properties>
     <dependencyManagement>
         <dependencies>
+            <!-- 定义 mapstruct 版本 -->
+            <dependency>
+                <groupId>org.mapstruct</groupId>
+                <artifactId>mapstruct-parent</artifactId>
+                <version>${mapstruct.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
             <!-- 定义公共版本 -->
             <dependency>
                 <groupId>org.laokou</groupId>
@@ -379,6 +393,23 @@
                         <arg>-Xlint:deprecation</arg>
                         <arg>-parameters</arg>
                     </compilerArgs>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.mapstruct</groupId>
+                            <artifactId>mapstruct-processor</artifactId>
+                            <version>${mapstruct.version}</version>
+                        </path>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>${lombok.version}</version>
+                        </path>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok-mapstruct-binding</artifactId>
+                            <version>${lombok-mapstruct-binding.version}</version>
+                        </path>
+                    </annotationProcessorPaths>
                 </configuration>
             </plugin>
             <plugin>
