--- a/laokou-service/laokou-module/laokou-flowable/laokou-flowable-start/pom.xml
+++ b/laokou-service/laokou-module/laokou-flowable/laokou-flowable-start/pom.xml
@@ -27,6 +27,10 @@
         </dependency>
         <dependency>
             <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
             <artifactId>laokou-flowable-adapter</artifactId>
         </dependency>
         <dependency>
