feat: 优化代码格式

--- a/laokou-service/laokou-module/laokou-flowable/laokou-flowable-adapter/pom.xml
+++ b/laokou-service/laokou-module/laokou-flowable/laokou-flowable-adapter/pom.xml
@@ -17,6 +17,20 @@
         </dependency>
         <dependency>
             <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-idempotent</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.laokou</groupId>
+                    <artifactId>laokou-common-core</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.laokou</groupId>
+                    <artifactId>laokou-common-redis</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
             <artifactId>laokou-flowable-app</artifactId>
         </dependency>
         <dependency>
