--- a/laokou-common/laokou-common-bom/pom.xml
+++ b/laokou-common/laokou-common-bom/pom.xml
@@ -114,11 +114,18 @@
         <mapstruct.version>1.5.5.Final</mapstruct.version>
         <!--mqtt版本-->
         <mqtt.version>6.1.4</mqtt.version>
+        <!--log4j2-ttl-thread-context-map版本-->
+        <log4j2-ttl-thread-context-map.version>1.4.0</log4j2-ttl-thread-context-map.version>
     </properties>
 
     <!-- 定义全局jar版本,模块使用需要再次引入但不用写版本号 -->
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>log4j2-ttl-thread-context-map</artifactId>
+                <version>${log4j2-ttl-thread-context-map.version}</version>
+            </dependency>
             <dependency>
                 <groupId>org.springframework.integration</groupId>
                 <artifactId>spring-integration-mqtt</artifactId>
