--- a/laokou-common/laokou-common-bom/pom.xml
+++ b/laokou-common/laokou-common-bom/pom.xml
@@ -116,6 +116,8 @@
         <mqtt.version>6.1.4</mqtt.version>
         <!--log4j2-ttl-thread-context-map版本-->
         <log4j2-ttl-thread-context-map.version>1.4.0</log4j2-ttl-thread-context-map.version>
+        <!--transmittable-thread-local版本-->
+        <transmittable-thread-local.version>2.14.3</transmittable-thread-local.version>
     </properties>
 
     <!-- 定义全局jar版本,模块使用需要再次引入但不用写版本号 -->
@@ -125,6 +127,11 @@
                 <groupId>com.alibaba</groupId>
                 <artifactId>log4j2-ttl-thread-context-map</artifactId>
                 <version>${log4j2-ttl-thread-context-map.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>transmittable-thread-local</artifactId>
+                <version>${transmittable-thread-local.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.integration</groupId>
