--- a/laokou-cloud/laokou-gateway/pom.xml
+++ b/laokou-cloud/laokou-gateway/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.laokou</groupId>
         <artifactId>laokou-cloud</artifactId>
-        <version>${laokou.version}</version>
+        <version>3.1.5</version>
     </parent>
     <artifactId>laokou-gateway</artifactId>
     <description>API网关</description>
