--- a/laokou-common/laokou-common-lock/pom.xml
+++ b/laokou-common/laokou-common-lock/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>laokou-common</artifactId>
         <groupId>org.laokou</groupId>
-        <version>${laokou.version}</version>
+        <version>3.1.5</version>
     </parent>
     <artifactId>laokou-common-lock</artifactId>
 
