--- a/laokou-service/laokou-admin/laokou-admin-domain/pom.xml
+++ b/laokou-service/laokou-admin/laokou-admin-domain/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.laokou</groupId>
         <artifactId>laokou-admin</artifactId>
-        <version>${laokou.version}</version>
+        <version>3.1.5</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>laokou-admin-domain</artifactId>
