--- a/laokou-service/laokou-auth/pom.xml
+++ b/laokou-service/laokou-auth/pom.xml
@@ -21,11 +21,11 @@
     <parent>
         <artifactId>laokou-service</artifactId>
         <groupId>org.laokou</groupId>
-        <version>${laokou.version}</version>
+        <version>3.1.5</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>laokou-auth</artifactId>
-    <version>${laokou.version}</version>
+    <version>3.1.5</version>
     <packaging>pom</packaging>
 
     <modules>
