--- a/laokou-service/laokou-module/laokou-api/laokou-api-server/pom.xml
+++ b/laokou-service/laokou-module/laokou-api/laokou-api-server/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>laokou-api</artifactId>
         <groupId>org.laokou</groupId>
-        <version>${laokou.version}</version>
+        <version>3.1.5</version>
     </parent>
     <artifactId>laokou-api-server</artifactId>
     <dependencies>
