--- a/laokou-service/laokou-module/laokou-im/pom.xml
+++ b/laokou-service/laokou-module/laokou-im/pom.xml
@@ -21,11 +21,11 @@
     <parent>
         <artifactId>laokou-module</artifactId>
         <groupId>org.laokou</groupId>
-        <version>${laokou.version}</version>
+        <version>3.1.5</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>laokou-im</artifactId>
-    <version>${laokou.version}</version>
+    <version>3.1.5</version>
     <packaging>pom</packaging>
     <modules>
         <module>laokou-im-client</module>
