--- a/laokou-service/laokou-module/laokou-logstash/pom.xml
+++ b/laokou-service/laokou-module/laokou-logstash/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>laokou-module</artifactId>
         <groupId>org.laokou</groupId>
-        <version>${laokou.version}</version>
+        <version>3.1.5</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>laokou-logstash</artifactId>
