--- a/laokou-service/laokou-report/laokou-report-start/pom.xml
+++ b/laokou-service/laokou-report/laokou-report-start/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.laokou</groupId>
         <artifactId>laokou-report</artifactId>
-        <version>${laokou.version}</version>
+        <version>3.1.5</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>laokou-report-start</artifactId>
