--- a/laokou-service/laokou-report/pom.xml
+++ b/laokou-service/laokou-report/pom.xml
@@ -5,11 +5,11 @@
     <parent>
         <artifactId>laokou-service</artifactId>
         <groupId>org.laokou</groupId>
-        <version>${laokou.version}</version>
+        <version>3.1.5</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>laokou-report</artifactId>
-    <version>${laokou.version}</version>
+    <version>3.1.5</version>
     <packaging>pom</packaging>
 
     <modules>
