--- a/laokou-service/laokou-module/laokou-flowable/laokou-flowable-start/pom.xml
+++ b/laokou-service/laokou-module/laokou-flowable/laokou-flowable-start/pom.xml
@@ -117,6 +117,8 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <imageName>${parent.artifactId}</imageName>
+                    <mainClass>org.laokou.flowable.FlowableApp</mainClass>
                     <fallback>false</fallback>
                     <!-- 快速构建 -->
                     <quickBuild>true</quickBuild>
