--- a/laokou-service/laokou-auth/laokou-auth-start/pom.xml
+++ b/laokou-service/laokou-auth/laokou-auth-start/pom.xml
@@ -144,6 +144,8 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <imageName>${parent.artifactId}</imageName>
+                    <mainClass>org.laokou.auth.AuthApp</mainClass>
                     <fallback>false</fallback>
                     <!-- 快速构建 -->
                     <quickBuild>true</quickBuild>
