--- a/laokou-service/laokou-module/laokou-im/laokou-im-start/pom.xml
+++ b/laokou-service/laokou-module/laokou-im/laokou-im-start/pom.xml
@@ -122,9 +122,14 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <imageName>${parent.artifactId}</imageName>
+                    <mainClass>org.laokou.im.ImApp</mainClass>
                     <fallback>false</fallback>
                     <!-- 快速构建 -->
                     <quickBuild>true</quickBuild>
+                    <buildArgs>
+                        <arg>--initialize-at-run-time=io.netty.handler.ssl.BouncyCastleAlpnSslUtils</arg>
+                    </buildArgs>
                 </configuration>
             </plugin>
             <plugin>
