--- a/laokou-common/laokou-common-mqtt/pom.xml
+++ b/laokou-common/laokou-common-mqtt/pom.xml
@@ -15,6 +15,10 @@
             <groupId>org.springframework.integration</groupId>
             <artifactId>spring-integration-mqtt</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-core</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
