--- a/laokou-service/laokou-module/laokou-api/pom.xml
+++ b/laokou-service/laokou-module/laokou-api/pom.xml
@@ -31,7 +31,7 @@
     <version>3.1.5</version>
 
     <modules>
-        <module>laokou-api-server</module>
+        <module>laokou-api-start</module>
     </modules>
 
 </project>
